<resources>
    <string name="app_name">Medical</string>
    <string name="usuario_text">Usuario</string>
    <string name="contraseña_text">Contraseña</string>
    <string name="ingresar_text">Ingresar</string>
    <string name="registrarme_text">Registrarme</string>
    <string name="app_title">Medical+</string>
    <string name="facebook_application_id" translatable="false">2650482491648834</string>
    <string name="facebook_login_protocol_schema" translatable="false">fb1634338046880924</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_identificación">Identificación</string>
    <string name="str_edad">Edad</string>
    <string name="str_genero">Género</string>
    <string name="str_teléfono">Teléfono</string>
    <string name="str_contacto_emergencia">Contacto de emergencia</string>
    <string name="str_dirección">Dirección</string>
    <string name="str_tipo_sangre">Tipo de sangre</string>
    <string name="str_nacionalidad">Nacionalidad</string>
    <string name="str_guardar">Guardar</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_borrar">Borrar</string>
    <string name="str_editar">Editar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_agenda2">Agenda2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="medicine_name">Medicina</string>
    <string name="medicine_dosis">Dosis</string>
    <string name="medicine_presentacion">Presentación</string>
    <string name="medicine_vencimiento">Fecha vencimiento</string>
    <string name="medicine_periodo">Periodo</string>
    <string name="medicine_uso">Uso del medicamento</string>
    <string name="title_activity_medicinas">Medicinas</string>
    <string name="title_activity_recordatorios">Recordatorios</string>
    <string name="title_activity_alertas">Alertas</string>

    <string name="no_medicine_message">No hay medicamentos</string>
    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string-array name="tipos_sangres">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="presentaciones">
        <item>Presentación</item>
        <item>Pastilla</item>
        <item>Cápsula</item>
        <item>Solución</item>
        <item>Inyectable</item>
        <item>Crema</item>
    </string-array>

</resources>
